gitlab-runner: Increase the pids_limit in containers.conf
The default is usually 2k per container which we hit very
often in runners with high cpu counts. Increase it to 64k
which is arbitrary but seems to be good enough for our workloads.

There's also a cgroup limit set by systemd on the container
slices/scopes and it defaults to around 300k usually, so
64k shouldn't be an issue or ordinarily high.

Likely fix for:
- Infrastructure/Infrastructure#1226
- Infrastructure/Infrastructure#1037

--- a/roles/gitlab-runner/files/containers.conf
+++ b/roles/gitlab-runner/files/containers.conf
@@ -1,2 +1,16 @@
 [engine]
 events_logger="file"
+
+# Increase the pids_limit of podman 
+# so that our runners stop failing to spawn
+# threads. The default is 2k and we hit it
+# very often if the ncpu/--jobs is high.
+#
+# There's also a cgroup limit set by systemd
+# on the containers scopes/slices, but also
+# libpod doesn't read it. Although it does
+# apply if set since systemd manages the
+# container scope anyway.
+[containers]
+pids_limit = 65536
+
