Add the containers.podman collection

--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -2,3 +2,4 @@ collections:
   - name: freeipa.ansible_freeipa
   - name: community.general
   - name: community.postgresql
+  - name: containers.podman
