Land missing podman pod systemd service file and associated dependencies

--- a/roles/gimp_mirrorbits/handlers/main.yml
+++ b/roles/gimp_mirrorbits/handlers/main.yml
@@ -23,3 +23,8 @@
   ansible.builtin.systemd:
     name: nginx.service
     state: restarted
+
+- name: Restart Mirrorbits pod
+  ansible.builtin.systemd:
+    name: mirrorbits-pod.service
+    state: restarted
