httpd_enable_homedirs=1 as it allows "allow httpd_t container_file_t:lnk_file read;"

--- a/roles/gimp_mirrorbits/tasks/nginx.yml
+++ b/roles/gimp_mirrorbits/tasks/nginx.yml
@@ -34,3 +34,9 @@
     name: httpd_can_network_connect
     state: true
     persistent: true
+
+- name: Set httpd_enable_homedirs SELinux boolean
+  ansible.posix.seboolean:
+    name: httpd_enable_homedirs
+    state: true
+    persistent: true
