--- a/playbooks/update_and_reboot.yml
+++ b/playbooks/update_and_reboot.yml
@@ -1,6 +1,6 @@
 ---
-- name: Update packages and reboot systems (OCP Virt only)
-  hosts: all
+- name: Update packages and reboot systems
+  hosts: all !idm
   remote_user: root
   roles:
     - package_updates
@@ -10,17 +10,15 @@
         reboot_timeout: 1200
       when:
         - reboot_check.rc == 1
-        - ansible_product_name == 'OpenShift Virtualization'
 
     - name: Wait for the system to come back online
       ansible.builtin.wait_for_connection:
         timeout: 300
       when:
         - reboot_check.rc == 1
-        - ansible_product_name == 'OpenShift Virtualization'
 
 - name: Update packages and reboot systems (IDM only)
-  hosts: ipaservers
+  hosts: idm
   remote_user: root
   gather_facts: false
   roles:
@@ -40,48 +38,9 @@
 
     - name: Check IDM services status
       ansible.builtin.command:
-        cmd: /usr/lib64/nagios/plugins/custom/check_ipa_status
+        cmd: /usr/local/bin/ipa_status.py
       register: check_ipa_status
-      until: check_ipa_status.stdout.find("IPA OK") != -1
+      until: check_ipa_status.stdout.find("OK:") != -1
       retries: 20
       delay: 60
       changed_when: false
-
-    - name: Check IDM replication status
-      ansible.builtin.command:
-        cmd: /usr/lib64/nagios/plugins/custom/check_ipa_replication
-      register: check_ipa_replication
-      until: check_ipa_replication.stdout.find("OK") != -1
-      retries: 20
-      delay: 60
-      changed_when: false
-
-- name: Package updates and reboots on Ceph nodes
-  hosts: ceph_osds
-  remote_user: root
-  gather_facts: false
-  roles:
-    - package_updates
-  tasks:
-    - name: Reboot the system if needed
-      ansible.builtin.reboot:
-        reboot_timeout: 1200
-      when:
-        - reboot_check.rc == 1
-
-    - name: Wait for the system to come back online
-      ansible.builtin.wait_for_connection:
-        timeout: 600
-      when:
-        - reboot_check.rc == 1
-
-    - name: Check Ceph health
-      ansible.builtin.command:
-        cmd: ceph -s -f json
-      register: ceph_status
-      until: ceph_status.stdout | from_json | json_query('health.status') == "HEALTH_OK"
-      retries: 20
-      delay: 60
-      changed_when: false
-      when:
-        - reboot_check.rc == 1
