One node at a time

--- a/playbooks/update_and_reboot.yml
+++ b/playbooks/update_and_reboot.yml
@@ -19,6 +19,7 @@
 
 - name: Update packages and reboot systems (IDM only)
   hosts: idm
+  serial: 1
   remote_user: root
   gather_facts: false
   roles:
