Add back repurposed RAL3 nodes

--- a/roles/base_auth/tasks/main.yml
+++ b/roles/base_auth/tasks/main.yml
@@ -20,7 +20,9 @@
   user:
     name: root
     password: "{{ root_password }}"
-  when: ('gimp' not in group_names)
+  when:
+  - ('gimp' not in group_names)
+  - ('ral3' not in group_names)
 
 - name: PermitRootLogin with without-password
   lineinfile:
