--- a/roles/gimp_mirrorbits/handlers/main.yml
+++ b/roles/gimp_mirrorbits/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Podman system migrate
+- name: podman system migrate
   ansible.builtin.command: podman system migrate
   become_user: podman
 
