Move this stanza to Fedora based systems

--- a/roles/external_base/tasks/fedora.yml
+++ b/roles/external_base/tasks/fedora.yml
@@ -21,3 +21,7 @@
   with_items:
     - dnf-automatic-install.timer
     - node_exporter
+
+- name: Configure chronyd
+  ansible.builtin.include_role:
+    name: chrony
