Another Fedora 41 fix

--- a/roles/external_base/tasks/fedora.yml
+++ b/roles/external_base/tasks/fedora.yml
@@ -9,7 +9,8 @@
     update_cache: true
 
 - name: add tailscale repo
-  ansible.builtin.command: dnf config-manager --add-repo https://pkgs.tailscale.com/stable/fedora/tailscale.repo
+  ansible.builtin.command: >
+    dnf config-manager {{ ansible_distribution_major_version == '40' ? '--add-repo' : 'addrepo' }} https://pkgs.tailscale.com/stable/fedora/tailscale.repo
   args:
     creates: /etc/yum.repos.d/tailscale.repo
 
