s/dnf-automatic-install/dnf-automatic

--- a/roles/external_base/tasks/fedora.yml
+++ b/roles/external_base/tasks/fedora.yml
@@ -20,7 +20,7 @@
     name: "{{ item }}"
     enabled: true
   with_items:
-    - dnf-automatic-install.timer
+    - dnf-automatic.timer
     - node_exporter
 
 - name: Configure chronyd
