Migrate smtp.gnome.org to AWS

--- a/playbooks/aws-us-east-1.yml
+++ b/playbooks/aws-us-east-1.yml
@@ -61,3 +61,15 @@
   remote_user: root
   roles:
    - postfix.wrapper
+
+- hosts: smtp_servers
+  gather_facts: false
+  remote_user: root
+  roles:
+   - postfix.server
+
+- hosts: dovecot_servers
+  gather_facts: false
+  remote_user: root
+  roles:
+    - dovecot
