Restore prometheus federation for external/gitlab-runners on hetzner-3

--- a/playbooks/external.yml
+++ b/playbooks/external.yml
@@ -18,3 +18,9 @@
   remote_user: root
   gather_facts: true
   tasks: []
+
+- hosts: hetzner-3
+  gather_facts: true
+  remote_user: root
+  roles:
+   - external_prometheus
