gitlab-runner: annotate buildbox-casd to be skipped by pydocuum

--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -156,6 +156,8 @@
     volumes:
       - casd_socket:/run/casd
       - casd_storage:/srv/cas
+    label:
+      org.gnome.pydocuum.skip: "True"
     quadlet_options:
       - "AutoUpdate=registry"
       - "Pull=newer"
