Don't cache /status as we use this endpoint for service monitoring

--- a/roles/flat-manager/files/flat-manager.gnome.org.conf
+++ b/roles/flat-manager/files/flat-manager.gnome.org.conf
@@ -47,6 +47,8 @@ server {
     location /status {
         proxy_pass http://127.0.0.1:8080;
         add_header Vary Accept-Encoding;
+
+        add_header Cache-Control 'no-store, no-cache, must-revalidate, max-age=0';
     }
 
     location = / {
