--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -152,6 +152,10 @@
     - "--jobs"
     - "{{ gitlab_runner_buildbox_casd_jobs }}"
     - "--bind unix:/run/casd/casd.sock"
+    - "--quota-high"
+    - "88%"
+    - "--reserved"
+    - "20G"
     - "/srv/cas"
     quadlet_filename: buildbox-casd
     privileged: true
