Clear with RandomizedDelaySec=0 to avoid timer's invalid argument

--- a/roles/external_base/tasks/fedora.yml
+++ b/roles/external_base/tasks/fedora.yml
@@ -56,7 +56,7 @@
       [Timer]
       # Clear the default schedule
       OnCalendar=
-      RandomizedDelaySec=
+      RandomizedDelaySec=0
 
       [Timer]
       OnCalendar=Sat 22:00
