Use specific resolvers for flat-manager, set TTL to 30s

--- a/roles/flat-manager/files/flat-manager.gnome.org.conf
+++ b/roles/flat-manager/files/flat-manager.gnome.org.conf
@@ -1,4 +1,6 @@
 server {
+    resolver 1.1.1.1 1.0.0.1 valid=30s;
+
     listen 443 ssl;
     ssl_certificate /etc/letsencrypt/live/flat-manager.gnome.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/flat-manager.gnome.org/privkey.pem;
